// Vitest Snapshot v1

exports[`%name { name: 'complete.json' } > html 1`] = `
<h1 class="heading-1" id="named-styles">Named styles</h1>
<h1 class="title" id="title">Title</h1>
<p class="subtitle" id="h.l7ftux4f1oct">Subtitle</p>
<h1 class="heading-1" id="heading-1">Heading 1</h1>
<h2 class="heading-2" id="heading-2">Heading 2</h2>
<h3 class="heading-3" id="heading-3">Heading 3</h3>
<h4 class="heading-4" id="heading-4">Heading 4</h4>
<h5 class="heading-5" id="heading-5">Heading 5</h5>
<h6 class="heading-6" id="heading-6">Heading 6</h6>
<p class="normal-text">Normal Text</p>
<p class="normal-text"></p>
<h1 class="heading-1" id="text-styles">Text styles</h1>
<p class="normal-text"><strong>Bold</strong></p>
<p class="normal-text"><i>Italics</i></p>
<p class="normal-text"><u>Underline</u></p>
<p class="normal-text"><span style="color: rgb(255, 0, 0)">Red</span></p>
<p class="normal-text">
  <span style="background-color: rgb(0, 255, 255)">Cyan</span>
</p>
<p class="normal-text">
  <u
    ><i
      ><strong
        ><span style="background-color: rgb(0, 255, 255); color: rgb(255, 0, 0)"
          >BoldItalicsUnderlineRedCyan</span
        ></strong
      ></i
    ></u
  >
</p>
<p class="normal-text"><sup>Superscript</sup></p>
<p class="normal-text"><sub>S</sub><sub>ubscript</sub></p>
<p class="normal-text"><s>Strikethrough</s></p>
<p class="normal-text">UPPERCASE</p>
<p class="normal-text">lowercase</p>
<p class="normal-text">Title Case</p>
<p class="normal-text"><span style="font-size: 12pt">Larger font</span></p>
<p class="normal-text"><span style="font-size: 10pt">Smaller font</span></p>
<p class="normal-text">
  <span style="font-size: 10pt; font-family: Courier New; font-weight: 400"
    >Courier New</span
  >
</p>
<p class="normal-text">
  <span
    style="font-size: 10pt; font-family: Courier New; font-weight: 400"
  ></span>
</p>
<p class="normal-text">White       space   patterns are         maintained.</p>
<h1 class="heading-1" id="paragraph-styles">Paragraph styles</h1>
<p style="text-align: end" class="normal-text">Right Aligned Text</p>
<p style="text-align: center" class="normal-text">Center Aligned Text</p>
<p style="text-align: justify" class="normal-text">
  Justified Text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
  do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
  commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
  non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</p>
<p style="margin-top: 10pt; margin-bottom: 10pt" class="normal-text">
  Extra spacing
</p>
<p
  style="
    padding-left: 36pt;
    text-indent: 36pt;
    margin-top: 10pt;
    margin-bottom: 10pt;
  "
  class="normal-text"
>
  Indented
</p>
<p
  style="
    border-left: 1pt rgb(0, 0, 0) solid;
    border-right: 1pt rgb(0, 0, 0) solid;
    border-top: 1pt rgb(0, 0, 0) solid;
    border-bottom: 1pt rgb(0, 0, 0) solid;
    padding-bottom: 2pt;
    padding-left: 2pt;
    padding-right: 2pt;
    margin-top: 10pt;
    margin-bottom: 10pt;
  "
  class="normal-text"
>
  Bordered paragraph
</p>
<h1 style="text-align: justify" class="heading-1" id="lists">Lists</h1>
<ul class="nesting-level-1">
  <li>Unordered list bullet</li>
  <ul class="nesting-level-2">
    <li>Nested unordered list bullet</li>
  </ul>
  <li>Another list bullet</li>
</ul>
<ol class="nesting-level-1" list-style-type="decimal">
  <li>Ordered listed bullet</li>
  <ol class="nesting-level-2" list-style-type="lower-alpha">
    <li>Nested ordered list bullet</li>
  </ol>
  <li>Another list bullet</li>
</ol>
<h1 style="text-align: justify" class="heading-1" id="tables">Tables</h1>
<p class="normal-text"></p>
<table>
  <tr>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p style="text-align: justify" class="normal-text">0</p>
      <p style="text-align: justify" class="normal-text">1</p>
      <p style="text-align: justify" class="normal-text">2</p>
    </td>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">top</p>
    </td>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: middle;
      "
    >
      <p class="normal-text">middle</p>
    </td>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: bottom;
      "
    >
      <p class="normal-text">bottom</p>
    </td>
  </tr>
</table>
<p style="text-align: justify" class="normal-text"></p>
<table>
  <tr>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">
        A <strong>table</strong> can contain <u>other</u> objects:
      </p>
      <p class="normal-text"></p>
      <p class="normal-text">
        <img
          src="https://lh3.googleusercontent.com/xCZbEel2PL0EnZgiLO5kcu05z8gDfmQ_81PIek3ZL9W4xsQ0QiCSAwfOaeJqMRNbEmxIYMs1SvvPrVa9ZtfNs3xLZBNMcORdy_v2mLfkcQwWJXFkrQXZEt22T53QWMKbwXuVY6K7Fp7pyrf7j_EF1yen6gxTchDI5PWVpOOP7O3M-ffGbJKyc8cpMoTPhL5pd5jVNkY"
        />
      </p>
    </td>
  </tr>
</table>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td
      style="
        border-left: 3pt rgb(255, 0, 0) solid;
        border-right: 1pt rgb(153, 153, 153) dotted;
        padding-bottom: 40.967999999999996pt;
        padding-left: 40.967999999999996pt;
        padding-right: 40.967999999999996pt;
        padding-top: 40.967999999999996pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">Custom borders and padding</p>
    </td>
  </tr>
</table>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">A table row</p>
    </td>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">Can have</p>
    </td>
  </tr>
  <tr>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text">Varying number of columns</p>
    </td>
    <td
      style="
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p class="normal-text"></p>
    </td>
  </tr>
</table>
<p class="normal-text"></p>
<h1 style="text-align: justify" class="heading-1" id="inline-objects">
  Inline Objects
</h1>
<p class="normal-text">
  <img
    src="https://lh4.googleusercontent.com/4d9rTM1YOP_A5F0yTEGxuvYDru5BpogNV7j7vvnM8qY0eMe6tfEb3r7Avaxy29_p9Fvy1aHYl5Hccp3LgRm8JVHbVKjfZYS05fGJ1dboSinyaBxn_GImUWFnpmZI7RVnQD2waruegurc7mSmHLmoQKMLx9zyMW26moDug_twsCmP1q2wmm0w0ye6O1v9zuNssecPj_8"
  />
</p>
<p class="normal-text">
  <img
    src="https://lh6.googleusercontent.com/eJmCPSeebCa4OD90Kxhs8m05eaKKmXXrP5PDCZk6hYYxx6cZXuTa6jiMVxl8P1QbF_SKtUnjHOleIAaT1Gy8rJpArnaKajwHz3HFMM4WlWQFC38nXB1HIJa77EXppDu1t1BHYeYszT0V9ir1iuRwLHRGAhb47peQOJGjOAhyNDPPK8VF27N8qXu6tA3idCWQGYDJ4V8"
  />
</p>
<p class="normal-text"></p>
<p class="normal-text">
  <img
    src="https://lh6.googleusercontent.com/M59Z_nBMDfqYrh44NIeGskPs2F2wH43T6Ygi8ZpgDXsWWzmpAYvp0SK3O8rnPZy36eJbJoTBvkRrhjlNe2HQzS8M7NlRF8H2X5DR86Au9TaVoDFGS0fFtU3Xp69qNTSWVCR5f_ESTVOxFS66gfJWMKqmlnPFxUCRqecEp3fB3VRWXYTtdIn7lxklRFcZMo9daEPcdrc"
  />
</p>
<h1 class="heading-1" id="links">Links</h1>
<p class="normal-text">
  <a href="#h.um9g39xs23pt" src="#named-styles">Internal</a>
</p>
<p class="normal-text"></p>
<p class="normal-text"><a href="https://example.com">example.com</a></p>
<p class="normal-text">footnote</p>
<h1 class="heading-1" id="misc">Misc</h1>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text">😀</p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td
      style="
        background-color: rgb(
          250.00000079999998,
          250.00000079999998,
          250.00000079999998
        );
        padding-bottom: 5pt;
        padding-left: 5pt;
        padding-right: 5pt;
        padding-top: 5pt;
        vertical-align: top;
      "
    >
      <p style="line-height: 115%" class="normal-text">
        <span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(155.9999985, 39.0000009, 176.0000055);
          "
          >const</span
        ><span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(0, 0, 0);
          "
        >
          foo </span
        ><span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(97.0000008, 97.0000008, 97.0000008);
          "
          >=</span
        ><span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(0, 0, 0);
          "
        >
        </span
        ><span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(15.00000015, 157.0000065, 88.00000275);
          "
          >"code block converted with addon"</span
        ><span
          style="
            font-size: 10pt;
            font-family: Consolas;
            font-weight: 400;
            color: rgb(97.0000008, 97.0000008, 97.0000008);
          "
          >;</span
        ><span
          style="font-size: 10pt; font-family: Consolas; font-weight: 400"
        ></span>
      </p>
    </td>
  </tr>
</table>
<p class="normal-text">
  <span
    style="
      font-family: Consolas;
      font-weight: 400;
      color: rgb(13.000000215, 144.0000045, 79.00000215);
    "
    >const foo = “inline code”;</span
  >
</p>
<p class="normal-text"></p>
<p class="normal-text">\`\`\`js</p>
<p class="normal-text">const foo = “block”;</p>
<p class="normal-text"> let indented;</p>
<p class="normal-text">// some other code here</p>
<p class="normal-text">let <strong>bold</strong>;</p>
<p class="normal-text">(1 + 2)</p>
<p class="normal-text">\`\`\`</p>
<p class="normal-text"></p>
<p class="normal-text">
  \`const foo = “inline”;\` and \`here is more inline code\` in a paragraph and but
  currently does not support \`<strong>formatted inline code</strong>\`.
</p>
<p class="normal-text"></p>
<p class="normal-text">
  <span style="font-family: Consolas; font-weight: 400">\`\`\`</span>
</p>
<p class="normal-text">
  <span style="font-family: Consolas; font-weight: 400">foo = bar</span>
</p>
<p class="normal-text">
  <span style="font-family: Consolas; font-weight: 400">\`\`\`</span>
</p>
<h1 class="heading-1" id="columns">Columns</h1>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
  ></span>
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
    >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
    non proident, sunt in culpa qui officia deserunt mollit anim id est
    laborum.</span
  >
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
  ></span>
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
    >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
    non proident, sunt in culpa qui officia deserunt mollit anim id est
    laborum</span
  >
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
  ></span>
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
    >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
    non proident, sunt in culpa qui officia deserunt mollit anim id est
    laborum</span
  >
</p>
<p class="normal-text">
  <span
    style="
      background-color: rgb(255, 255, 255);
      font-size: 10.5pt;
      font-family: Open Sans;
      font-weight: 400;
    "
  ></span>
</p>
<h1 class="heading-1" id></h1>
<h1 class="heading-1" id="end-of-columns">End of columns</h1>

`;

exports[`%name { name: 'complete.json' } > html without styles 1`] = `
<h1 class="heading-1" id="named-styles">Named styles</h1>
<h1 class="title" id="title">Title</h1>
<p class="subtitle" id="h.l7ftux4f1oct">Subtitle</p>
<h1 class="heading-1" id="heading-1">Heading 1</h1>
<h2 class="heading-2" id="heading-2">Heading 2</h2>
<h3 class="heading-3" id="heading-3">Heading 3</h3>
<h4 class="heading-4" id="heading-4">Heading 4</h4>
<h5 class="heading-5" id="heading-5">Heading 5</h5>
<h6 class="heading-6" id="heading-6">Heading 6</h6>
<p class="normal-text">Normal Text</p>
<p class="normal-text"></p>
<h1 class="heading-1" id="text-styles">Text styles</h1>
<p class="normal-text"><strong>Bold</strong></p>
<p class="normal-text"><i>Italics</i></p>
<p class="normal-text"><u>Underline</u></p>
<p class="normal-text">Red</p>
<p class="normal-text">Cyan</p>
<p class="normal-text">
  <u
    ><i><strong>BoldItalicsUnderlineRedCyan</strong></i></u
  >
</p>
<p class="normal-text"><sup>Superscript</sup></p>
<p class="normal-text"><sub>S</sub><sub>ubscript</sub></p>
<p class="normal-text"><s>Strikethrough</s></p>
<p class="normal-text">UPPERCASE</p>
<p class="normal-text">lowercase</p>
<p class="normal-text">Title Case</p>
<p class="normal-text">Larger font</p>
<p class="normal-text">Smaller font</p>
<p class="normal-text">Courier New</p>
<p class="normal-text"></p>
<p class="normal-text">White       space   patterns are         maintained.</p>
<h1 class="heading-1" id="paragraph-styles">Paragraph styles</h1>
<p class="normal-text">Right Aligned Text</p>
<p class="normal-text">Center Aligned Text</p>
<p class="normal-text">
  Justified Text: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
  do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
  minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
  commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
  non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</p>
<p class="normal-text">Extra spacing</p>
<p class="normal-text">Indented</p>
<p class="normal-text">Bordered paragraph</p>
<h1 class="heading-1" id="lists">Lists</h1>
<ul class="nesting-level-1">
  <li>Unordered list bullet</li>
  <ul class="nesting-level-2">
    <li>Nested unordered list bullet</li>
  </ul>
  <li>Another list bullet</li>
</ul>
<ol class="nesting-level-1" list-style-type="decimal">
  <li>Ordered listed bullet</li>
  <ol class="nesting-level-2" list-style-type="lower-alpha">
    <li>Nested ordered list bullet</li>
  </ol>
  <li>Another list bullet</li>
</ol>
<h1 class="heading-1" id="tables">Tables</h1>
<p class="normal-text"></p>
<table>
  <tr>
    <td>
      <p class="normal-text">0</p>
      <p class="normal-text">1</p>
      <p class="normal-text">2</p>
    </td>
    <td><p class="normal-text">top</p></td>
    <td><p class="normal-text">middle</p></td>
    <td><p class="normal-text">bottom</p></td>
  </tr>
</table>
<p class="normal-text"></p>
<table>
  <tr>
    <td>
      <p class="normal-text">
        A <strong>table</strong> can contain <u>other</u> objects:
      </p>
      <p class="normal-text"></p>
      <p class="normal-text">
        <img
          src="https://lh3.googleusercontent.com/xCZbEel2PL0EnZgiLO5kcu05z8gDfmQ_81PIek3ZL9W4xsQ0QiCSAwfOaeJqMRNbEmxIYMs1SvvPrVa9ZtfNs3xLZBNMcORdy_v2mLfkcQwWJXFkrQXZEt22T53QWMKbwXuVY6K7Fp7pyrf7j_EF1yen6gxTchDI5PWVpOOP7O3M-ffGbJKyc8cpMoTPhL5pd5jVNkY"
        />
      </p>
    </td>
  </tr>
</table>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td><p class="normal-text">Custom borders and padding</p></td>
  </tr>
</table>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td><p class="normal-text">A table row</p></td>
    <td><p class="normal-text">Can have</p></td>
  </tr>
  <tr>
    <td><p class="normal-text">Varying number of columns</p></td>
    <td><p class="normal-text"></p></td>
  </tr>
</table>
<p class="normal-text"></p>
<h1 class="heading-1" id="inline-objects">Inline Objects</h1>
<p class="normal-text">
  <img
    src="https://lh4.googleusercontent.com/4d9rTM1YOP_A5F0yTEGxuvYDru5BpogNV7j7vvnM8qY0eMe6tfEb3r7Avaxy29_p9Fvy1aHYl5Hccp3LgRm8JVHbVKjfZYS05fGJ1dboSinyaBxn_GImUWFnpmZI7RVnQD2waruegurc7mSmHLmoQKMLx9zyMW26moDug_twsCmP1q2wmm0w0ye6O1v9zuNssecPj_8"
  />
</p>
<p class="normal-text">
  <img
    src="https://lh6.googleusercontent.com/eJmCPSeebCa4OD90Kxhs8m05eaKKmXXrP5PDCZk6hYYxx6cZXuTa6jiMVxl8P1QbF_SKtUnjHOleIAaT1Gy8rJpArnaKajwHz3HFMM4WlWQFC38nXB1HIJa77EXppDu1t1BHYeYszT0V9ir1iuRwLHRGAhb47peQOJGjOAhyNDPPK8VF27N8qXu6tA3idCWQGYDJ4V8"
  />
</p>
<p class="normal-text"></p>
<p class="normal-text">
  <img
    src="https://lh6.googleusercontent.com/M59Z_nBMDfqYrh44NIeGskPs2F2wH43T6Ygi8ZpgDXsWWzmpAYvp0SK3O8rnPZy36eJbJoTBvkRrhjlNe2HQzS8M7NlRF8H2X5DR86Au9TaVoDFGS0fFtU3Xp69qNTSWVCR5f_ESTVOxFS66gfJWMKqmlnPFxUCRqecEp3fB3VRWXYTtdIn7lxklRFcZMo9daEPcdrc"
  />
</p>
<h1 class="heading-1" id="links">Links</h1>
<p class="normal-text">
  <a href="#h.um9g39xs23pt" src="#named-styles">Internal</a>
</p>
<p class="normal-text"></p>
<p class="normal-text"><a href="https://example.com">example.com</a></p>
<p class="normal-text">footnote</p>
<h1 class="heading-1" id="misc">Misc</h1>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text">😀</p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<p class="normal-text"></p>
<table>
  <tr>
    <td>
      <p class="normal-text">
        <span>const</span><span> foo </span><span>=</span><span> </span
        ><span>"code block converted with addon"</span><span>;</span
        ><span></span>
      </p>
    </td>
  </tr>
</table>
<p class="normal-text"><span>const foo = “inline code”;</span></p>
<p class="normal-text"></p>
<p class="normal-text">\`\`\`js</p>
<p class="normal-text">const foo = “block”;</p>
<p class="normal-text"> let indented;</p>
<p class="normal-text">// some other code here</p>
<p class="normal-text">let <strong>bold</strong>;</p>
<p class="normal-text">(1 + 2)</p>
<p class="normal-text">\`\`\`</p>
<p class="normal-text"></p>
<p class="normal-text">
  \`const foo = “inline”;\` and \`here is more inline code\` in a paragraph and but
  currently does not support \`<strong>formatted inline code</strong>\`.
</p>
<p class="normal-text"></p>
<p class="normal-text">\`\`\`</p>
<p class="normal-text">foo = bar</p>
<p class="normal-text">\`\`\`</p>
<h1 class="heading-1" id="columns">Columns</h1>
<p class="normal-text"></p>
<p class="normal-text">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum.
</p>
<p class="normal-text"></p>
<p class="normal-text">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum
</p>
<p class="normal-text"></p>
<p class="normal-text">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
  nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
  eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
  in culpa qui officia deserunt mollit anim id est laborum
</p>
<p class="normal-text"></p>
<h1 class="heading-1" id></h1>
<h1 class="heading-1" id="end-of-columns">End of columns</h1>

`;
